crates/zuban_python/tests/mypylike/tests/auto_import.test
[case auto_import_our_own_mods]

#? code-actions
foo

#? --codepoint-column 0 code-actions
x.foo

[file x.py]
foo = 1

[out]
__main__:3: error: Name "foo" is not defined
__main__:6: error: Name "x" is not defined
__main__.py:3: Code Actions:
- Import `x.foo`: 1:0-1:0 replaced with: "from x import foo\n"
__main__.py:6: Code Actions:
- Import `x`: 1:0-1:0 replaced with: "import x\n"

[case auto_import_with_selection_should_have_single_import_for_repeats]
# flags: --no-typecheck

#? code-actions --until-line 6
foo
foo

[file x.py]
foo = 1

[out]
__main__.py:4: Code Actions:
- Import `x.foo`: 1:0-1:0 replaced with: "from x import foo\n"

[case auto_import_with_range]
# flags: --no-typecheck

bar
#? code-actions --until-line 6
foo
x
baz

[file x.py]
foo = 1
bar = 1
baz = 1

[out]
__main__.py:5: Code Actions:
- Import `x.foo`: 1:0-1:0 replaced with: "from x import foo\n"
- Import `x`: 1:0-1:0 replaced with: "import x\n"

[case auto_import_add_name_to_from1]
# flags: --no-typecheck
from x import a
#? code-actions
b

def f() -> None:
    #? code-actions
    b

[file x.py]
a = 1
b = 1

[out]
__main__.py:4: Code Actions:
- Import `x.b`: 2:15-2:15 replaced with: ", b"
__main__.py:8: Code Actions:
- Import `x.b`: 2:15-2:15 replaced with: ", b"
